# rpc-benchmarking

./: README.md  REQUIREMENTS.md  pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/core/: __init__.py  config.py  database.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: __init__.py  benchmark_service.py  chain_service.py  test_definitions.py
backend/presets/chains/: arbitrum.json  base.json  ethereum.json  optimism.json  polygon.json
backend/rpc_benchmarker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
frontend/: index.html
frontend/css/: styles.css
frontend/js/: api.js  app.js
frontend/js/utils/: formatting.js
